Add metadata store client
This is a PoC of the metadata client to check the available metadata about a submission.

--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,8 @@
 mongo:
   authMechanism: "SCRAM-SHA-1"
-  database: "metadata"
   host: mongodb://127.0.0.1
   port: 27017
-  user: "datasteward"
-  password: "datasteward"
+  user: "admin"
+  password: "admin"
   cacert: ""
-loglevel: "debug"
+loglevel: "info"
