--- a/dev_tools/docker-compose.yml
+++ b/dev_tools/docker-compose.yml
@@ -11,5 +11,13 @@ services:
       - "data:/data/db"
     ports:
       - "27017:27017"
+  s3:
+    command: server /data
+    image: minio/minio:RELEASE.2021-02-01T22-56-52Z
+    ports:
+      - "9000:9000"
+    environment:
+      - MINIO_ACCESS_KEY=access
+      - MINIO_SECRET_KEY=secretkey
 volumes:
   data:
