--- a/dev_tools/docker-compose.yml
+++ b/dev_tools/docker-compose.yml
@@ -13,11 +13,42 @@ services:
       - "27017:27017"
   s3:
     command: server /data
-    image: minio/minio:RELEASE.2021-02-01T22-56-52Z
-    ports:
-      - "9000:9000"
+    container_name: s3
     environment:
       - MINIO_ACCESS_KEY=access
       - MINIO_SECRET_KEY=secretkey
+    healthcheck:
+      test: ["CMD", "curl", "-fkq", "https://localhost:9000/minio/health/live"]
+      interval: 5s
+      timeout: 20s
+      retries: 3
+    image: minio/minio:RELEASE.2020-06-03T22-13-49Z
+    ports:
+      - "9000:9000"
+    volumes:
+      - ./certs/ca.pem:/root/.minio/certs/CAs/public.crt
+      - ./certs/s3.pem:/root/.minio/certs/public.crt
+      - ./certs/s3-key.pem:/root/.minio/certs/private.key
+  db:
+    command: server /data
+    container_name: db
+    environment:
+      - DB_LEGA_IN_PASSWORD=lega_in
+      - DB_LEGA_OUT_PASSWORD=lega_out
+      - PKI_VOLUME_PATH=/certs/
+      - PG_CA=/var/lib/postgresql/tls/ca.pem
+      - PG_SERVER_CERT=/var/lib/postgresql/tls/db.pem
+      - PG_SERVER_KEY=/var/lib/postgresql/tls/db-key.pem
+    healthcheck:
+      test: ["CMD", "pg_isready", "-h", "localhost", "-U", "lega_out"]
+      interval: 5s
+      timeout: 20s
+      retries: 3
+    image: neicnordic/sda-db:latest
+    ports:
+      - "5432:5432"
+    volumes:
+      - /tmp/data:/data
+      - ./certs:/certs
 volumes:
   data:
